--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".Main2Activity"
-            android:label="@string/title_activity_main2"></activity>
-        <activity
-            android:name=".log_in"
-            android:theme="@style/AppTheme"
-            android:usesCleartextTraffic="true" />
-        <activity android:name=".Signup" />
+
+        <activity android:name=".log_in"
+        android:theme="@style/AppTheme"
+            android:usesCleartextTraffic="true"></activity>
+        <activity android:name=".Signup"></activity>
+
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden">
@@ -27,7 +26,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+
+
 
         <meta-data
             android:name="preloaded_fonts"
