--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
 
 dependencies {
 
-    implementation 'com.mikhaellopez:circularimageview:4.0.1'
+    //implementation 'com.mikhaellopez:circularimageview:4.0.1'
     def work_version = "2.1.0"
     implementation "androidx.work:work-runtime:$work_version"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -33,6 +33,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+   // implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+    //TODO resolve conflict
 
 }
