--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     implementation "androidx.work:work-runtime:$work_version"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.0'
-
+    implementation 'com.googlecode.json-simple:json-simple:1.1'
     implementation 'com.google.android.material:material:1.0.0'
     implementation "androidx.navigation:navigation-fragment:2.1.0-rc01"
     implementation "androidx.navigation:navigation-ui:2.1.0-rc01"
@@ -36,7 +36,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     implementation 'com.google.android.material:material:1.0.0'
-    //implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+
 
 
 }
