--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,21 +32,22 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".PinLocations"
-            android:label="@string/title_activity_pin_locations"></activity>
-<activity android:name=".HelpSync"></activity>
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps"></activity>
         <activity
-
+            android:name=".PinLocations"
+            android:label="@string/title_activity_pin_locations" />
+        <activity android:name=".HelpSync" />
+        <activity
             android:name=".Home"
-            android:label="@string/title_activity_main2"
-            android:configChanges="orientation|screenSize|keyboardHidden">
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:label="@string/title_activity_main2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-                   </activity>
-
+        </activity>
         <activity
             android:name=".log_in"
             android:theme="@style/AppTheme"
@@ -54,9 +55,7 @@
         <activity android:name=".Signup" />
         <activity
             android:name=".MainActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden">
-
-        </activity>
+            android:configChanges="orientation|screenSize|keyboardHidden"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
